# robin-hood-the-legend-of-sherwood

./: .gitignore  AGENTS.md  COMPRESSION.md  Cargo.toml  DATADIRS.md  DEAD_STATE_PATHFINDER.md  DEAD_STATE_SCRIPT.md  JSON_SERVER.md  NEW_FEATURES.md  README.md  claude-worktree  merge-claude-worktrees  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: deploy-wasm-shell.yml  publish-wasm-binaries.yml
android/: AndroidManifest.xml  README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/java/io/github/phiresky/robinhood/: RobinHoodActivity.java
android/app/src/main/res/values/: styles.xml
assets/ferris/: generate_ferris_overlay.py
assets/shader_presets/: crt-guest-advanced-robin.slangp
crates/robin_assets/: Cargo.toml
crates/robin_assets/src/: actor_names.rs  adpcm_check.rs  convertkeys.rs  decompile.rs  disasm.rs  frame_holder.rs  keyconfig.rs  lib.rs  picture.rs  res_descr.rs  resource_manager.rs  sb3d.rs  scb.rs  serialize.rs  shipping_datadir.rs
crates/robin_assets/tests/: script_manager_integration.rs  vm_integration.rs
crates/robin_engine/: Cargo.toml
crates/robin_engine/examples/: measure_engine.rs
crates/robin_engine/src/: abilities.rs  ai.rs  ai_detectable_filter.rs  ai_entity_view.rs  ai_friendly.rs  ai_vision.rs  alert_colors.rs  bow_shot.rs  campaign.rs  change.rs  character_kind.rs  combat.rs  console.rs  element.rs  element_kinds.rs  element_priority.rs  engine_manager.rs  entity_id.rs  event.rs  fast_find_grid.rs  game_operation.rs  gate.rs  geo2d.rs  graphic_config.rs  interp.rs  inventory.rs  jump.rs  jump_line.rs  level_data.rs  lib.rs  macro_store.rs  markers.rs  mask.rs  material_sectors.rs  md5.rs  messenger.rs  minimap.rs  mission.rs  mission_stat.rs  movement.rs  (+40 more)
crates/robin_engine/src/ai_enemy/: alert.rs  archer_combat.rs  battle.rs  combat_positions.rs  event_handlers.rs  mod.rs  periodic.rs  seek.rs  substate_handlers.rs  util.rs
crates/robin_engine/src/engine/: ale.rs  animation.rs  anti_collision.rs  beggar.rs  camera.rs  combat.rs  commands.rs  console_dispatch.rs  corpse_intersection.rs  display_state.rs  door_pass.rs  filter_ai_event_tests.rs  global_options.rs  input.rs  jump.rs  level_loading.rs  mod.rs  movement.rs  nets.rs  patch_effects.rs  peripherals.rs  posture_transitions.rs  purse.rs  refresh_seek.rs  reinforcement.rs  rollback_safe.rs  script.rs  scroll_reveal.rs  seat.rs  sector_motion.rs  selection.rs  sequence_validity.rs  soldier_helpers.rs  target_interaction.rs  target_script_tests.rs  teleport.rs  tests.rs  tick.rs  titbit_sync.rs  transitions.rs  (+2 more)
crates/robin_engine/src/engine/ai/: detection.rs  mod.rs  post_detection.rs  snapshots.rs
crates/robin_engine/src/engine/melee/: damage.rs  dispatch.rs  effects.rs  evaluate.rs  mod.rs  speech.rs  strikes.rs  swordfight.rs
crates/robin_engine/src/natives/: commands.rs  defs.rs  mod.rs  signatures.rs  tests.rs
crates/robin_engine/src/widget_state/: blazon_bar.rs  blazon_set.rs  mod.rs  requirements.rs
crates/robin_engine/tests/: method_lvalue_footgun.rs
crates/robin_lua/: Cargo.toml
crates/robin_lua/examples/: check_mod_lua.rs
crates/robin_lua/src/: lib.rs  natives.rs  state.rs
crates/robin_lua/tests/: natives_smoke.rs
crates/robin_rs/: Cargo.toml  build.rs  clippy.toml
crates/robin_rs/examples/: audio_decode_bench.rs  batch_run.rs  count_quads.rs  cpf_to_json.rs  datadir_breakdown.rs  disasm_scb.rs  dump_res.rs  dump_save.rs  jxl_map_roundtrip.rs  list_mods.rs  pak_res_roundtrip.rs  run_script.rs  sprite_size_bench.rs  verify_rollback.rs
crates/robin_rs/shaders/: _common.wgsl  bicubic.wgsl  cut3.wgsl  lanczos.wgsl  loading_dissolve.wgsl  mask_overlay.wgsl  quad.wgsl  scale2x.wgsl  scale3x.wgsl  sharp_bilinear.wgsl  xbr_lv1.wgsl
crates/robin_rs/src/: android.rs  bg_cache.rs  blit_to_map.rs  campaign_map.rs  chroma.rs  console_overlay.rs  corner_hud.rs  cursor.rs  debug_stub.rs  draw_manager.rs  focus_manager.rs  font.rs  font_manager.rs  game.rs  game_input.rs  game_render.rs  gamepad.rs  gfx_types.rs  gpu_upscale.rs  hardware.rs  host.rs  host_mouse.rs  http_server.rs  hud_text.rs  input.rs  input_translator.rs  key_config_store.rs  legacy_save.rs  level_loading_host.rs  lib.rs  loading_dissolve_gpu.rs  loading_screen.rs  lua_session.rs  main_entry.rs  markers.rs  menu.rs  mod_pack.rs  mouse_trail.rs  mouse_way.rs  multiplayer.rs  (+27 more)
crates/robin_rs/src/game_session/: dispatch.rs  input_handlers.rs  mod.rs  modal_state.rs  mouse_input.rs  multiplayer.rs  render.rs  replay_init.rs  setup.rs  tick.rs
crates/robin_rs/src/ingame_menu/: blazon_set.rs  briefings.rs  buy_blazons.rs  debriefing.rs  dialogue.rs  graphics.rs  layout.rs  mission_description.rs  mission_state.rs  mod.rs  modal_net.rs  options.rs  pause.rs  popup_scroll.rs  resources.rs  save_load.rs  shortcuts.rs  sounds.rs  widget_bridge.rs  yesno.rs
crates/robin_rs/src/main_menu/: credits.rs  custom_missions.rs  mod.rs  movies.rs  multiplayer_lobby.rs  options.rs  player_select.rs  save_load.rs
crates/robin_rs/src/multiplayer/: lobby.rs  native.rs  wasm.rs
crates/robin_rs/src/widget/: button.rs  frame_wnd.rs  input_field.rs  label.rs  listbox.rs  mod.rs  picture.rs  radio.rs  slider.rs  toggle.rs
crates/robin_state_hash_derive/: Cargo.toml
crates/robin_state_hash_derive/src/: lib.rs
crates/robin_state_hash_derive/tests/: derive.rs
crates/robin_util/: Cargo.toml
crates/robin_util/src/: asset_fs.rs  color.rs  lib.rs  state_hash.rs  static_arc.rs
docs/: COMPRESSION.md  DATADIRS.md  MULTIPLAYER.md  ferris-in-robin-hood.avif
wasm-www/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
wasm-www/scripts/: inline-dist-index.mjs  optimize-wasm.mjs
wasm-www/src/: log.ts  main.ts  replay.ts  timeline.ts
