[package]
name = "robin_lua"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "robin_lua"

[dependencies]
robin_engine = { path = "../robin_engine" }
robin_util = { path = "../robin_util" }
# `vendored` builds Lua 5.4 from source so we don't need a system Lua.
# `send` makes `Lua` `Send` — required because `Engine` (and anything that
# holds the script host) is moved across threads in the rollback pipeline.
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3"
